--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
     "netlify-cms": "^1.9.3",
+    "ramda": "^0.26.1",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
