--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint": "^5.10.0",
     "eslint-plugin-ramda": "^2.5.1",
     "gatsby": "^1.9.277",
+    "gatsby-cli": "^2.4.7",
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-react-helmet": "^2.0.11",
