--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -40,6 +40,7 @@ collections:
       - { label: Body, name: body, widget: markdown }
       - { label: Timeline, name: timeline, widget: string }
       - { label: Image, name: image, widget: image, required: false }
-      - { label: Embed, name: embed, widget: string }
+      - { label: Embed, name: embed, widget: string, required: false }
+      - { label: Timestamp, name: timestamp, widget: date }
 
 
